# looplm

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  404.html  COMPACT_FIX_SUMMARY.md  COMPACT_IMPROVEMENTS.md  CUSTOM_TOOLS.md  README.md  demo_compact.py  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: develop.yml  feature.yml  release.yml  test.yml
chat-usage/: index.html
configuration/: index.html
direct-usage/: index.html
docs/: chat-usage.md  configuration.md  direct-usage.md  index.md  textual-ui.md  tool_calling.md  usage.md
search/: search_index.json
src/looplm/: __init__.py
src/looplm/chat/: __init__.py  commands.py  compact_handler.py  console.py  control.py  persistence.py  prompt_manager.py  prompts.py  session.py  textual_ui.py
src/looplm/chat/commands/: __init__.py  file_command.py  folder_command.py  github_command.py  processor.py  registry.py  shell_command.py
src/looplm/cli/: __init__.py  __main__.py  chat.py  main.py  setup.py
src/looplm/commands/: __init__.py  custom_date_command.py  file_command.py  folder_command.py  github_command.py  image_command.py  manager.py  pdf_command.py  processor.py  registry.py  shell_command.py
src/looplm/config/: __init__.py  manager.py  providers.py
src/looplm/conversation/: __init__.py  handler.py
src/looplm/interactive/: shell.py
src/looplm/preprocessor/: __init__.py  files.py
src/looplm/prompts/: compact.txt
src/looplm/tools/: __init__.py  base.py  manager.py  registry.py
src/looplm/tools/builtin/: __init__.py  basic_tools.py
src/looplm/utils/: __init__.py  prompts.py  readline_compatibility.py  sample.ipynb  warnings.py
tests/: README.md  __init__.py  conftest.py  test_compact.py  test_compact_handler.py
tests/cli/: test_main.py
tests/commands/: test_manager.py
tests/config/: __init__.py  conftest.py  test_manager.py  test_manager_additional.py  test_providers.py
tests/conversation/: test_handler.py
tests/preprocessor/: __init__.py  conftest.py  test_error.py  test_files.py
tests/test_cli/: test_chat.py  test_main.py  test_setup.py
tests/test_config/: test_manager.py  test_providers.py
tests/test_conversation/: test_handler.py
usage/: index.html
