[tool.poetry]
name = "looplm"
version = "0.4.0"
description = "Loop-LM: Tool to access LLMs from the command line"
authors = ["Chaitanya Devaguptapu <tdchaitanya@gmail.com>"]
readme = "README.md"
packages = [{include = "looplm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.8"
rich = "^13.9.4"
boto3 = "^1.37.21"
prompt-toolkit = "^3.0.50"
gnureadline = "^8.2.13"
markitdown = "^0.1.1"
requests = "^2.32.3"
google-genai = "^1.8.0"
aiofiles = "^24.1.0"
aiohttp = "^3.11.14"
gitingest = "^0.1.4"
pyperclip = "^1.9.0"
litellm = "^1.64.1"
cryptography = "^44.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
mypy = "^1.15.0"
ipykernel = "^6.29.5"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pre-commit = "^4.2.0"
pytest-benchmark = "^5.1.0"
memory-profiler = "^0.61.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.9"
mkdocstrings = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
looplm = "looplm.cli.main:main"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test"]
python_functions = ["test_*"]
addopts = "-v --cov=looplm --cov-report=term-missing"
